--- a/branches/2.1/Tpl/Admin/Default/Common/incTop.html
+++ b/branches/2.1/Tpl/Admin/Default/Common/incTop.html
@@ -39,11 +39,11 @@
             <a id="adminMap" href="javascript:void(0);" data-uri="{:U('Admin/Index/map')}" title="后台地图"><span>后台地图</span></a></div>
         <div class="toolmenu"><span class="bar-btn"></span>
             <ul class="bar-list" style="display: none;">
-                <li><a onclick="openItem(&#39;clear,cache,setting&#39;);" href="javascript:void(0)">更新站点缓存</a></li>
+                <li><a onclick="openItem('');" href="javascript:void(0)">更新站点缓存</a></li>
                 <li><a href="javascript:void(0);" onclick="window.location.reload();return false;" id="iframe_refresh">刷新管理中心</a></li>
-                <li><a href="JavaScript:void(0);" onclick="openItem(&#39;db,db,website&#39;);">备份恢复数据</a></li>
+                <li><a href="JavaScript:void(0);" onclick="openItem('');">备份恢复数据</a></li>
                 <li><a href="http://www.shopnctest.com/huli/index.php?act=updatestat&op=index" target="workspace">更新信用统计</a></li>
-                <li><a href="http://www.shopnctest.com/huli/" title="管理中心-ShopNC商城" rel="sidebar" onclick="javascript:window.external.AddFavorite(&#39;http://www.shopnctest.com/huli/&#39;, &#39;管理中心-ShopNC商城&#39;);return false;">收藏管理中心</a></li>
+                <li><a href="http://www.shopnctest.com/huli/" title="管理中心-ShopNC商城" rel="sidebar" onclick="javascript:window.external.AddFavorite('');return false;">收藏管理中心</a></li>
             </ul>
         </div>
     </div>
