--- a/branches/2.1/Tpl/Admin/Default/ArticleCategory/index.html
+++ b/branches/2.1/Tpl/Admin/Default/ArticleCategory/index.html
@@ -7,11 +7,11 @@
         </thead>
     </table>
     <div class="contentbox" data-uri='{:U("Admin/ArticleCategory/doEditStatus")}'>
-        <table width="100%" class="list td_align">
+        <table width="100%" class="list td_align"  id="J_cate_tree">
             <thead>
                 <tr class="thead">
                     <th class="align-center"><input name="id" type="checkbox" class="checkAll" id="checkboxall"  data-checklist="checkSon_x" data-direction="x"/></th>
-                    <th class="align-center">标题</th>
+                    <th align="left">标题</th>
                     <th class="align-center">别名</th>
                     <th class="align-center">排序</th>
                     <th class="align-center">是否显示</th>
@@ -21,39 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-            <volist name="data" id="vo">
-                <tr id="list_{$vo.id}">
-                    <td class="align-center">
-                        <input type="checkbox" value="{$vo.id}" name="checkall" class="checkSon" data-xid="checkSon_x"/>
-                        <if condition="$vo.count eq '1'">
-                            <img src="__PUBLIC__/Admin/images/tr_unfold.gif" data-id="{$vo.id}" data-status="open" data-type="show" style="position: absolute;cursor: pointer;">
-                        </if>
-                    </td>
-                    
-                    <td class="align-center">
-                        {$vo.title}
-                    </td>
-                    <td class="align-center">{$vo.alias}</td>
-                    <td class="align-center">{$vo.order}</td>
-                    <td class="align-center">
-                        <img class="pointer" data-id="{$vo[id]}" style="cursor: pointer;" data-field="status" data-value="{$vo.status}"
-                        <if condition="$vo.status eq '1'">
-                            src="__PUBLIC__/Admin/images/icons/icon_1.png" alt="启用" title="启用"
-                            <else />
-                            src="__PUBLIC__/Admin/images/icons/icon_0.png" alt="停用" title="停用"
-                        </if> 
-                        />
-                    </td>
-                    <td class="align-center">{$vo.create_time}</td>
-                    <td class="align-center">{$vo.update_time}</td>
-                    <td class="align-center">
-                        <div class="button-group">
-                            <a href='{:U("Admin/ArticleCategory/edit?id=$vo[id]")}'  class="button danger icon pill edit" alt="编辑" title="编辑"></a>
-                            <a href="javascript:void(0);"  data-uri='{:U("Admin/ArticleCategory/doDelete","id=$vo[id]")}' val="{$vo[id]}" data-msg="确定要删除“<font color='red'>{$vo.title}</font>”吗？" data-acttype="ajax" class="button danger icon pill remove doDel" title="删除"></a>
-                        </div>
-                    </td>
-                </tr>
-            </volist>
+            {$list}
             <empty name="data">
                 <tr><td colspan="9" class="left align-center">暂时没有数据!</td></tr>
             </empty>
